# pixel-portfolio

./: .gitignore  README.md  dune-project  pixel_portfolio.opam  tayseer
_build/: .db  .digest-db  log
_build/default/: META.pixel_portfolio  README.md  pixel_portfolio.dune-package  pixel_portfolio.install  pixel_portfolio.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/7c54b8bb24dc88752a445fdeda873385/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/demo/cmdliner/: cmdliner_demo.ml  cmdliner_demo.pp.ml
_build/default/demo/owl/: owl_demo.pp.ml
_build/default/src/lib/: engine.ml  engine.mli  engine.pp.ml  engine.pp.mli  gbm.ml  gbm.mli  gbm.pp.ml  gbm.pp.mli  model.ml  model.mli  model.pp.ml  model.pp.mli  money.ml  money.mli  ou.ml  (+25 more)
_coverage/: index.html
_coverage/src/lib/: engine.ml.html  game_config.ml.html  game_runtime.ml.html  game_view.ml.html  gbm.ml.html  model.ml.html  money.ml.html  noise.ml.html  order.ml.html  ou.ml.html  portfolio.ml.html  save_game_state.ml.html  ticker.ml.html
_coverage/src/test/: pixel_portfolio_tests.ml.html
demo/cmdliner/: cmdliner_demo.ml  dune
demo/owl/: dune  owl_demo.ml
src/lib/: dune  engine.ml  engine.mli  game_config.ml  game_config.mli  game_runtime.ml  game_runtime.mli  game_view.ml  game_view.mli  gbm.ml  gbm.mli  model.ml  model.mli  money.ml  money.mli  noise.ml  noise.mli  order.ml  order.mli  ou.ml  ou.mli  portfolio.ml  portfolio.mli  save_game_state.ml  save_game_state.mli  ticker.ml  ticker.mli
src/test/: dune  pixel_portfolio_tests.ml
(+154 files in other folders)
